[gd_scene load_steps=19 format=2]

[ext_resource path="res://Images/createdByBolon667.png" type="Texture" id=1]
[ext_resource path="res://Images/sgdkStudio_logo2_hideBack.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Hardpixel.OTF" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/startWindow/startUpMenu.gd" type="Script" id=4]
[ext_resource path="res://Styles/style1.tres" type="Theme" id=5]

[sub_resource type="Gradient" id=1]
interpolation_mode = 2
colors = PoolColorArray( 1, 0.977292, 0.636667, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
fill_from = Vector2( 0.5, 1 )
fill_to = Vector2( 0.5, 0 )

[sub_resource type="DynamicFont" id=13]
size = 60
outline_size = 2
outline_color = Color( 1, 0.745098, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.188235, 0.964706, 0.509804, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0.45098, 0.207843, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.760784, 0.313726, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0.45098, 0.207843, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.658824, 0.364706, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.588235, 0.32549, 0.0431373, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.937255, 0.545098, 0.207843, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.588235, 0.32549, 0.0431373, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0.843137, 0.988235, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.709804, 0.0117647, 0.686275, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.72549, 0.976471, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.517647, 0.0117647, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.435294, 0.482353, 1, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.2, 0.25098, 0.803922, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.345098, 0.396078, 0.94902, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.145098, 0.192157, 0.709804, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.643137, 0.643137, 0.643137, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.25098, 0.25098, 0.25098, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.537255, 0.537255, 0.537255, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="startUpMenu" type="Control" groups=["startUpMenu"]]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="logohbox" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 984.0
margin_bottom = 212.0
alignment = 1

[node name="Logo" type="TextureRect" parent="VBoxContainer/logohbox"]
margin_right = 674.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 212 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="versionLabel" type="Label" parent="VBoxContainer/logohbox"]
margin_left = 678.0
margin_top = 70.0
margin_right = 984.0
margin_bottom = 142.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
custom_fonts/font = SubResource( 13 )
text = "v1.0 alpha"

[node name="ContainerButtons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 984.0
margin_bottom = 266.0

[node name="NewProjBtn" type="Button" parent="VBoxContainer/ContainerButtons"]
margin_right = 106.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "New project"

[node name="LoadProjBtn" type="Button" parent="VBoxContainer/ContainerButtons"]
margin_left = 110.0
margin_right = 221.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 5 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "Load project"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 270.0
margin_right = 984.0
margin_bottom = 492.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 822.0
margin_bottom = 222.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.239216, 0.25098, 0.262745, 1 )

[node name="ListContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Control/ListContainer"]
margin_right = 818.0
margin_bottom = 20.0
text = "Recent projects"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Control/ListContainer"]
margin_top = 24.0
margin_right = 818.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/Control/ListContainer/HBoxContainer"]
margin_right = 818.0
margin_bottom = 198.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="prevProjectsContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Control/ListContainer/HBoxContainer/ScrollContainer"]
margin_right = 818.0
margin_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 826.0
margin_right = 984.0
margin_bottom = 222.0

[node name="supportBtn" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 158.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = SubResource( 10 )
custom_styles/normal = SubResource( 7 )
text = "Support my work ♥"

[node name="discordBtn" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 158.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = SubResource( 11 )
custom_styles/normal = SubResource( 8 )
text = "Discord"

[node name="githubBtn" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 158.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = SubResource( 12 )
custom_styles/normal = SubResource( 9 )
text = "Github"

[node name="Author" type="TextureRect" parent="VBoxContainer"]
margin_top = 496.0
margin_right = 984.0
margin_bottom = 560.0
texture = ExtResource( 1 )
stretch_mode = 3

[node name="createProjectDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.0
margin_top = -167.0
margin_right = 247.0
margin_bottom = 167.0
window_title = "Сохранить файл"
access = 2

[node name="loadProjectDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -246.0
margin_top = -164.0
margin_right = 248.0
margin_bottom = 167.0
window_title = "Открыть каталог"
mode = 2
access = 2

[connection signal="button_down" from="VBoxContainer/ContainerButtons/NewProjBtn" to="." method="_on_NewProjBtn_button_down"]
[connection signal="button_down" from="VBoxContainer/ContainerButtons/LoadProjBtn" to="." method="_on_LoadProjBtn_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/supportBtn" to="." method="_on_supportBtn_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/discordBtn" to="." method="_on_discordBtn_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/githubBtn" to="." method="_on_githubBtn_button_down"]
[connection signal="file_selected" from="createProjectDialog" to="." method="_on_createProjectDialog_file_selected"]
[connection signal="dir_selected" from="loadProjectDialog" to="." method="_on_loadProjectDialog_dir_selected"]
